[gd_scene load_steps=10 format=3 uid="uid://chuxr2qow5gp5"]

[ext_resource type="Script" path="res://script/Interface.gd" id="1_3v7o7"]
[ext_resource type="Texture2D" uid="uid://dv86x1y88bk0y" path="res://asset/interface/inner.png" id="1_fidg5"]
[ext_resource type="Texture2D" uid="uid://cmdhyl00ebb05" path="res://asset/interface/outer.png" id="2_sxyej"]
[ext_resource type="Texture2D" uid="uid://bptn4gh5eagav" path="res://asset/interface/progress.png" id="3_l0ljs"]
[ext_resource type="Texture2D" uid="uid://cs6welovjim23" path="res://asset/interface/tabs.png" id="5_wsxvg"]
[ext_resource type="Texture2D" uid="uid://r0mx5wybdxwe" path="res://asset/core.png" id="6_k8lw5"]
[ext_resource type="Texture2D" uid="uid://drubwsfjdgy14" path="res://asset/icons/vacuum.png" id="7_lpdww"]
[ext_resource type="Texture2D" uid="uid://bus5xv7ucp1o4" path="res://asset/icons/white.png" id="8_b2vk8"]
[ext_resource type="Texture2D" uid="uid://bp02j4i6o0vh1" path="res://asset/icons/mimc.png" id="9_x7gb5"]

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3v7o7")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.643138, 0.798605, 1, 0.490196)

[node name="ProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 4.0
offset_right = 376.0
offset_bottom = 54.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = ExtResource("1_fidg5")
texture_over = ExtResource("2_sxyej")
texture_progress = ExtResource("3_l0ljs")

[node name="Energy" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 5.0
offset_right = 342.0
offset_bottom = 55.0
texture = ExtResource("5_wsxvg")

[node name="Label" type="Label" parent="Energy"]
layout_mode = 0
offset_left = 13.0
offset_top = 9.0
offset_right = 1883.0
offset_bottom = 671.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 430
text = "ENERGY"

[node name="Energy_count" type="Label" parent="Energy"]
layout_mode = 0
offset_left = 109.0
offset_top = 8.0
offset_right = 769.0
offset_bottom = 621.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(0.680733, 0.786848, 1, 1)
theme_override_font_sizes/font_size = 450
text = "0
"

[node name="Time" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 965.0
offset_top = 5.0
offset_right = 1138.0
offset_bottom = 55.0
texture = ExtResource("5_wsxvg")

[node name="Label" type="Label" parent="Time"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 1884.0
offset_bottom = 671.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 430
text = "TIME"

[node name="Counter" type="Label" parent="Time"]
layout_mode = 0
offset_left = 93.0
offset_top = 9.0
offset_right = 1244.0
offset_bottom = 622.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(0.680733, 0.786848, 1, 1)
theme_override_font_sizes/font_size = 450
text = "00:00"

[node name="Timer" type="Timer" parent="Time"]
wait_time = 90.0
one_shot = true

[node name="One" type="Label" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 18.0
offset_right = 617.0
offset_bottom = 427.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 300
text = "0
"

[node name="Two" type="Label" parent="."]
layout_mode = 0
offset_left = 648.0
offset_top = 18.0
offset_right = 1128.0
offset_bottom = 427.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 300
text = "25
"

[node name="Three" type="Label" parent="."]
layout_mode = 0
offset_left = 931.0
offset_top = 18.0
offset_right = 1411.0
offset_bottom = 427.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 300
text = "25
"

[node name="Lives" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 5.0
offset_right = 163.0
offset_bottom = 55.0
texture = ExtResource("5_wsxvg")

[node name="Cores" type="Label" parent="Lives"]
layout_mode = 0
offset_left = 88.0
offset_top = 9.0
offset_right = 408.0
offset_bottom = 622.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(0.680733, 0.786848, 1, 1)
theme_override_font_sizes/font_size = 450
text = "0
"

[node name="Label" type="Label" parent="Lives"]
layout_mode = 0
offset_left = 71.0
offset_top = 8.0
offset_right = 391.0
offset_bottom = 670.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 430
text = "x"

[node name="TextureRect" type="TextureRect" parent="Lives"]
layout_mode = 0
offset_left = 26.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 43.0
texture = ExtResource("6_k8lw5")
expand_mode = 1

[node name="ColorRect2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(80, 160)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -588.0
offset_bottom = -428.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.643138, 0.798605, 1, 0.490196)

[node name="Eat" type="TextureButton" parent="ColorRect2"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 71.0
offset_bottom = 72.0
texture_normal = ExtResource("7_lpdww")

[node name="TextureProgressBar" type="TextureProgressBar" parent="ColorRect2/Eat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
fill_mode = 5
texture_progress = ExtResource("8_b2vk8")
tint_progress = Color(0.184314, 0.184314, 0.184314, 0.8)

[node name="Mimic" type="TextureButton" parent="ColorRect2"]
layout_mode = 0
offset_left = 7.0
offset_top = 86.0
offset_right = 71.0
offset_bottom = 150.0
texture_normal = ExtResource("9_x7gb5")

[node name="TextureProgressBar" type="TextureProgressBar" parent="ColorRect2/Mimic"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 5.0
step = 0.01
fill_mode = 5
texture_progress = ExtResource("8_b2vk8")
tint_progress = Color(0.184314, 0.184314, 0.184314, 0.8)
